[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "highway-env"
description = "An environment for simulated highway driving tasks."
readme = "README.md"
requires-python = ">= 3.10"
authors = [{ name = "Edouard Leurent", email = "eleurent@gmail.com" }]
maintainers = [{ name = "Jin Huang", email = "hugo@hugohuang.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "Reinforcement Learning", "Car Simulation", "Traffic Simulation", "Machine Learning",
    "RL", "AI", "ML",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=1.0.0a2",
    "farama-notifications>=0.0.1",
    "numpy>=1.23.0",
    "pygame-ce>=2.1.3",
    "matplotlib",
    "pandas",
    "noise>=1.2.2",
    "tqdm>=4.68.4",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "diff-cover",
    "pytest",
    "pytest-cov",
    "scipy",
]

[project.urls]
Homepage = "https://farama.org"
Repository = "https://github.com/Farama-Foundation/HighwayEnv"
Documentation = "https://highway-env.farama.org/"
"Bug Report" = "https://github.com/Farama-Foundation/HighwayEnv/issues"
Changelog = "https://highway-env.farama.org/main/release_notes"

# NOTE: These two lines have no effect currently, don't be confused
[project.entry-points."gymnasium.envs.__root__"]
highway-env = "highway_env:_register_highway_envs"

[dependency-groups]
test = [
    "diff-cover",
    "pytest",
    "pytest-cov",
    "scipy",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "celshast",
    "sphinx_github_changelog",
    "sphinxcontrib-bibtex",
    "ipykernel",
    "jupyter-sphinx",
]
style = [
    "pre-commit",
    "ruff",
    "ty",
]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    { include-group = "style" },
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["highway_env", "highway_env.*"]

[tool.setuptools.package-data]

[tool.black]

[tool.isort]
atomic = true
profile = "black"
src_paths = ["highway_env", "tests", "docs/_scripts"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    # "E",  # pycodestyle errors
    # "F",  # pyflakes
    # "UP", # pyupgrade
    # "I",  # isort
    # "D",  # pydocstyle
    "B",  # bugbear
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["I", "E"]
