[metadata]
name=highway-env
version=1.8.2
author=Edouard Leurent
author_email=eleurent@gmail.com
description=An environment for simulated highway driving tasks.
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/eleurent/highway-env
license=MIT
classifiers=
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License


[options]
setup_requires=
    pytest-runner
install_requires=
    gymnasium>=0.27
    numpy
    pygame>=2.0.2
    matplotlib
    pandas
    scipy
packages=find:
tests_require=
    pytest

[options.extras_require]
deploy = pytest-runner; sphinx<1.7.3; sphinx_rtd_theme

[options.packages.find]
exclude =
    tests
    docs
    scripts

[options.entry_points]
gymnasium.envs =
    __root__ = highway_env.__init__:register_highway_envs

[aliases]
test=pytest
